[workspace]
resolver = "2"

members = [
    "core",
    "jiminy", 
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates


# solana crates (for dev)


# workspace members
sanctum-spl-token-core = { path = "core" }
sanctum-spl-token-jiminy = { path = "jiminy" }
