[workspace]
resolver = "2"

members = [
    "core",
    "jiminy",
    "tests/solana-comp",
    "tests/test-programs/*",
    "tests/test-utils", 
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
# Dont really care as much for dev deps
const-crypto = { version = "^0.3", default-features = false }
generic-array-struct = { version = "=0.3.0-bc", default-features = false }

# jiminy crates
jiminy-cpi = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master" }
jiminy-entrypoint = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master" }

# dev deps
proptest = { version = "^1" }

# solana crates (for dev)
mollusk-svm = "^0.1"
mollusk-svm-programs-token = { version = "^0.1", default-features = false, features = ["token"] }
solana-account = "^2"
solana-logger = "^2"
solana-pubkey = "^2"
solana-rent = "^2"
spl-token = "^8"

# workspace members
sanctum-spl-token-core = { path = "core" }
sanctum-spl-token-jiminy = { path = "jiminy" }
sanctum-spl-token-test-utils = { path = "./tests/test-utils" }
