[package]
name = "sanctum-spl-token-test-utils"
edition.workspace = true
version.workspace = true

[dependencies]
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
spl-token = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
mollusk-svm = { workspace = true }
proptest = { workspace = true }
solana-logger = { workspace = true }
