[package]
name = "burn-test"
edition.workspace = true
version.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy-cpi = { workspace = true }
jiminy-entrypoint = { workspace = true }
sanctum-spl-token-jiminy = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
proptest = { workspace = true }
sanctum-spl-token-test-utils = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
spl-token = { workspace = true }
